--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ asgiref==3.8.1
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.0
+crispy-bootstrap5==2024.10
 cryptography==44.0.0
 defusedxml==0.7.1
 Django==3.2.25
 django-allauth==0.50.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 idna==3.10
 oauthlib==3.2.2
@@ -17,5 +19,6 @@ pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 sqlparse==0.5.3
+stripe==11.5.0
 typing_extensions==4.12.2
 urllib3==2.3.0
