feat: views and forms tests added for checkout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,8 +19,12 @@
     "Allauth",
     "csrfmiddlewaretoken",
     "expandright",
+    "invalidemail",
+    "lineitem",
+    "lineitems",
     "postloadjs",
     "searchbar",
-    "searchbutton"
+    "searchbutton",
+    "testpass"
   ]
 }
