feat: tests done, views 100% coverage!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,14 +17,18 @@
   "terminal.integrated.gpuAcceleration": "canvas",
   "cSpell.words": [
     "Allauth",
+    "blanksearch",
     "csrfmiddlewaretoken",
     "expandright",
+    "fretboard",
     "invalidemail",
+    "johndoe",
     "lineitem",
     "lineitems",
     "postloadjs",
     "searchbar",
     "searchbutton",
+    "Stratocaster",
     "testpass"
   ]
 }
