chore: more test work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "Allauth",
     "blanksearch",
     "csrfmiddlewaretoken",
+    "cust",
     "expandright",
     "fretboard",
     "invalidemail",
