feat: about us and contact us made, with urls and views added to render, alot of small changes such as links

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,9 @@
     "postloadjs",
     "searchbar",
     "searchbutton",
+    "Specialising",
     "Stratocaster",
-    "testpass"
+    "testpass",
+    "tonewoods"
   ]
 }
