--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "blanksearch",
     "csrfmiddlewaretoken",
     "cust",
+    "epiphone",
     "expandright",
     "fretboard",
     "invalidemail",
